--- a/src/main/resources/Qt5/helpers-header.mustache
+++ b/src/main/resources/Qt5/helpers-header.mustache
@@ -1,13 +1,13 @@
 {{>licenseInfo}}
-#ifndef _Swagger_{{prefix}}Helpers_H
-#define _Swagger_{{prefix}}Helpers_H
+#ifndef _{{namespace}}_{{prefix}}Helpers_H
+#define _{{namespace}}_{{prefix}}Helpers_H
 
 #include <QJsonValue>
 
 class QObject;
 
-namespace Swagger {
-    void setValue(void* value, QJsonValue obj, const QString& type, const QString& complexType, QObject *parent = nullptr);
+namespace {{namespace}} {
+    void setValue(void* value, const QString &valueName, QJsonValue obj, const QString& type, const QString& complexType, QObject *parent = nullptr);
     void toJsonArray(QList<void*>* value, QJsonArray* output, const QString& innerType);
     void toJsonValue(const QString& name, void* value, QJsonObject* output, const QString& type);
     bool isCompatibleJsonValue(const QString& type);
@@ -17,4 +17,4 @@ namespace Swagger {
     QString stringValue(bool value);
 }
 
-#endif // _Swagger_{{prefix}}Helpers_H
+#endif // _{{namespace}}_{{prefix}}Helpers_H
