--- a/src/main/resources/Qt5/model-body.mustache
+++ b/src/main/resources/Qt5/model-body.mustache
@@ -13,15 +13,15 @@
 // create an anonymous namespace to make the function invisible from other modules
 namespace
 {
-    Swagger::{{prefix}}Object *Create{{classname}}(QObject *parent)
+    {{namespace}}::{{prefix}}Object *Create{{classname}}(QObject *parent)
     {
-        return new Swagger::{{classname}}(parent);
+        return new {{namespace}}::{{classname}}(parent);
     }
-    const bool registered = Swagger::{{prefix}}ObjectFactory::Get().Register("Swagger::{{classname}}", Create{{classname}});
-    const int id = qRegisterMetaType<Swagger::{{classname}} *>("Swagger::{{classname}} *");
+    const bool registered = {{namespace}}::{{prefix}}ObjectFactory::Get().Register("{{namespace}}::{{classname}}", Create{{classname}});
+    const int newId = qRegisterMetaType<{{namespace}}::{{classname}} *>("{{namespace}}::{{classname}} *");
 }
 
-namespace Swagger {
+namespace {{namespace}} {
 
 {{classname}}::{{classname}}(QObject *parent)
 : {{prefix}}Object(parent){{#vars}}{{#vendorExtensions.isObject}}, {{name}}(nullptr){{/vendorExtensions.isObject}}{{/vars}}
@@ -29,8 +29,7 @@ namespace Swagger {
 }
 
 {{classname}}::~{{classname}}()
-{
-}
+= default;
 
 void {{classname}}::fromJson(const QString &json)
 {
@@ -43,7 +42,7 @@ void {{classname}}::fromJson(const QString &json)
 void {{classname}}::fromJsonObject(const QJsonObject &pJson)
 {
     {{#vars}}
-    {{^isContainer}}{{#vendorExtensions.isObject}}::Swagger::setValue(&{{name}}, pJson["{{name}}"], "{{baseType}}", "{{complexType}}", this);{{/vendorExtensions.isObject}}{{^vendorExtensions.isObject}}::Swagger::setValue(&{{name}}, pJson["{{name}}"], "{{baseType}}", "{{complexType}}");{{/vendorExtensions.isObject}}{{/isContainer}}{{#isContainer}}{{#vendorExtensions.isInnerObject}}::Swagger::setValue(&{{name}}, pJson["{{name}}"], "{{baseType}}", "{{items.complexType}}", this);{{/vendorExtensions.isInnerObject}}{{^vendorExtensions.isInnerObject}}::Swagger::setValue(&{{name}}, pJson["{{name}}"], "{{baseType}}", "{{items.baseType}}");{{/vendorExtensions.isInnerObject}}{{/isContainer}}
+    {{^isContainer}}{{#vendorExtensions.isObject}}::{{namespace}}::setValue(&{{name}}, "{{name}}", pJson["{{name}}"], "{{baseType}}", "{{complexType}}", this);{{/vendorExtensions.isObject}}{{^vendorExtensions.isObject}}::{{namespace}}::setValue(&{{name}}, "{{name}}", pJson["{{name}}"], "{{baseType}}", "{{complexType}}");{{/vendorExtensions.isObject}}{{/isContainer}}{{#isContainer}}{{#vendorExtensions.isInnerObject}}::{{namespace}}::setValue(&{{name}}, "{{name}}", pJson["{{name}}"], "{{baseType}}", "{{items.complexType}}", this);{{/vendorExtensions.isInnerObject}}{{^vendorExtensions.isInnerObject}}::{{namespace}}::setValue(&{{name}}, "{{name}}", pJson["{{name}}"], "{{baseType}}", "{{items.baseType}}");{{/vendorExtensions.isInnerObject}}{{/isContainer}}
     {{/vars}}
 }
 
@@ -58,7 +57,7 @@ QJsonObject {{classname}}::asJsonObject()
 {
     QJsonObject obj;
     {{#vars}}
-    {{#vendorExtensions.isObject}}obj["{{name}}"] = {{name}}->asJsonObject();{{/vendorExtensions.isObject}}{{^vendorExtensions.isObject}}{{#isContainer}}
+    {{#vendorExtensions.isObject}}obj["{{name}}"] = {{name}} ? {{name}}->asJsonObject() : QJsonValue();{{/vendorExtensions.isObject}}{{^vendorExtensions.isObject}}{{#isContainer}}
     QJsonArray {{name}}JsonArray;
     foreach(auto e, {{name}})
     {
@@ -84,8 +83,9 @@ void {{classname}}::{{setter}}({{{vendorExtensions.paramType}}} {{name}})
 
 {{/vars}}
 
+} /* namespace {{namespace}} */
 
-} /* namespace Swagger */
+#include "moc_{{classname}}.cpp"
 
 {{/model}}
 {{/models}}
