--- a/src/main/resources/Qt5/api-header.mustache
+++ b/src/main/resources/Qt5/api-header.mustache
@@ -1,34 +1,46 @@
 {{>licenseInfo}}
-#ifndef _Swagger_{{classname}}_H_
-#define _Swagger_{{classname}}_H_
-
-#include "{{prefix}}HttpRequest.h"
+#ifndef _{{namespace}}_{{classname}}_H_
+#define _{{namespace}}_{{classname}}_H_
 
 {{#imports}}{{{import}}}
 {{/imports}}
 
-#include <QObject>
+#include <QNetworkReply>
 
-namespace Swagger {
+namespace {{namespace}} {
+
+class {{prefix}}HttpRequestInputFileElement;
+class {{prefix}}HttpRequestWorker;
 
 class {{classname}}: public QObject {
+
     Q_OBJECT
 
+    QString _host;
+    QString _basePath;
+    QList<QNetworkReply::RawHeaderPair> _lastRawHeaderPairs;
+
 public:
-    {{classname}}();
-    {{classname}}(QString host, QString basePath);
-    ~{{classname}}();
+    {{classname}}(QObject *parent = nullptr);
+    {{classname}}(const QString &host, const QString &basePath, QObject *parent = nullptr);
+    virtual ~{{classname}}() override;
 
-    QString host;
-    QString basePath;
+    const QList<QNetworkReply::RawHeaderPair> &    lastRawHeaderPairs() const;
 
-    {{#operations}}{{#operation}}void {{nickname}}({{#allParams}}{{{vendorExtensions.paramType}}} {{paramName}}{{#hasMore}}, {{/hasMore}}{{/allParams}});
+    {{#operations}}{{#operation}}{{#vendorExtensions.isFile}}QNetworkRequest {{/vendorExtensions.isFile}}{{^vendorExtensions.isFile}}void{{/vendorExtensions.isFile}} {{nickname}}({{#allParams}}{{{vendorExtensions.paramType}}} {{paramName}}{{#hasMore}}, {{/hasMore}}{{/allParams}});
     {{/operation}}{{/operations}}
 private:
-    {{#operations}}{{#operation}}void {{nickname}}Callback ({{prefix}}HttpRequestWorker * worker);
-    {{/operation}}{{/operations}}
+    {{#operations}}{{#operation}}{{^vendorExtensions.isFile}}
+void {{nickname}}Callback ({{namespace}}::{{prefix}}HttpRequestWorker * worker);
+{{/vendorExtensions.isFile}}{{/operation}}{{/operations}}
 signals:
-    {{#operations}}{{#operation}}void {{nickname}}Signal({{#returnType}}{{{returnType}}} summary, {{/returnType}}bool ok, QString message);
+
+    {{#operations}}{{#operation}}{{^vendorExtensions.isFile}}
+void {{nickname}}Signal({{#returnType}}{{{returnType}}} summary, {{/returnType}}bool ok, QString message);
+{{/vendorExtensions.isFile}}
+{{#vendorExtensions.isFile}}
+{{/vendorExtensions.isFile}}
+
     {{/operation}}{{/operations}}
 };
 }
